--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Red+Hat+Display&display=swap" rel="stylesheet">
+
+        <script src="https://kit.fontawesome.com/6de19bdc2d.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header>
@@ -24,6 +26,7 @@
 
         
         <section class="home" id="home">
+            <img src="./img/20436641.jpg" class="background-image">
             <div>
                 <img src="./img/myself.jpg">
             </div>
@@ -50,9 +53,9 @@
         </section>
 
 
-        <section id="activities">
+        <section id="activities" class="activities">
             <h1>activities</h1>
-            <div style="display: flex;">
+            <div class="acticities-container">
                 <div>
                     <img src="./img/activities1.jpg">
                     <h2>I sing</h2>
@@ -72,12 +75,12 @@
         </section>
 
 
-        <section id="contact">
+        <section id="contact" class="contact">
             <div>
                 <img src="./img/call me.jpg">
             </div>
-            <div style="display: flex;">
-                <h1>contact</h1>
+            <div>
+                <h1>Contact</h1>
                 <form action="mailto:myemail@gmail.com" method="post" enctype="text/plain">
                         <label>Name:</label>
                         <input type="text" name="Your name" placeholder="Enter your name here"><br>
@@ -92,7 +95,13 @@
             
         </section>
 
-        <footer></footer>
+        <footer>
+            <a href=""><i class="fa-brands fa-facebook"></i></a>
+            <a href=""><i class="fa-brands fa-github"></i></a>
+            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <p>123-753-0657 | email@gmail.com </p>
+        </footer>
 
     </body>
     <script></script>
